samples/_failures_safe/1761403305_edec11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a91bbf7.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_8a91bbf7.c:150:9: error: expected expression at end of input
  150 |         token.type =
      |         ^~~~~
./samples/SAFE/__tmp_8a91bbf7.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a91bbf7.c:150:9: error: expected declaration or statement at end of input
